RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -126,6 +126,8 @@ WHERE e.emp_no=tb.emp_no;
 * **ref (*)**
 	* 조인의 순서와 관계없이 사용되며, 프라이머리 키나 유니크 키등의 제약 조건도 없다. **WHERE 절에 동등 조건으로 검색**할 때 사용되는 방법.
 * **fulltest**
+	* MySQL 전문 검색 인덱스를 사용해 레코드를 읽는 접근 방법.
+		* 
 * **ref_or_null**
 * **unique_subquery**
 * **index_subquery**
@@ -134,11 +136,11 @@ WHERE e.emp_no=tb.emp_no;
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5Mjc1NzY2MzIsMTg3OTk5NDU1MywtMT
-Q5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEwNzcw
-MzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3Ny
-wxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NTc2
-NzA0MTYsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcwNi
-wtMTMxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5
-NDg1NzUwNTRdfQ==
+eyJoaXN0b3J5IjpbMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xND
+kwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAz
+NjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3LD
+E0OTI3NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1NzY3
+MDQxNiwtNzc3OTMwNzI3LDY4NjIzMzQwOSwxMDQ2NDg4NzA2LC
+0xMzEzNzA1MDU0LC0xMDc3NTU1MDMxLDE5OTUzNzc3NDYsMTk0
+ODU3NTA1NF19
 -->
