RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -127,8 +127,9 @@ WHERE e.emp_no=tb.emp_no;
 	* 조인의 순서와 관계없이 사용되며, 프라이머리 키나 유니크 키등의 제약 조건도 없다. **WHERE 절에 동등 조건으로 검색**할 때 사용되는 방법.
 * **fulltest**
 	* MySQL 전문 검색 인덱스를 사용해 레코드를 읽는 접근 방법.
-		* 
+		* 전문 검색 인덱스는 통계 정복
 * **ref_or_null**
+	* 
 * **unique_subquery**
 * **index_subquery**
 * **range**
@@ -136,11 +137,11 @@ WHERE e.emp_no=tb.emp_no;
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xND
-kwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAz
-NjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3LD
-E0OTI3NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1NzY3
-MDQxNiwtNzc3OTMwNzI3LDY4NjIzMzQwOSwxMDQ2NDg4NzA2LC
-0xMzEzNzA1MDU0LC0xMDc3NTU1MDMxLDE5OTUzNzc3NDYsMTk0
-ODU3NTA1NF19
+eyJoaXN0b3J5IjpbLTUwOTUxNTMxNiwxMzE0MzMxMjQ5LDE4Nz
+k5OTQ1NTMsLTE0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4
+MTg0MSwxMDc3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LD
+EyOTQwNjAzNzcsMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNzAy
+Mzk2OCwxODU3NjcwNDE2LC03Nzc5MzA3MjcsNjg2MjMzNDA5LD
+EwNDY0ODg3MDYsLTEzMTM3MDUwNTQsLTEwNzc1NTUwMzEsMTk5
+NTM3Nzc0Nl19
 -->
