RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -127,7 +127,7 @@ WHERE e.emp_no=tb.emp_no;
 	* 조인의 순서와 관계없이 사용되며, 프라이머리 키나 유니크 키등의 제약 조건도 없다. **WHERE 절에 동등 조건으로 검색**할 때 사용되는 방법.
 * **fulltest**
 	* MySQL 전문 검색 인덱스를 사용해 레코드를 읽는 접근 방법.
-		* 전문 검색 인덱스는 통계 정보가 관리되지 않기 때문에 전문 인덱스를 사용할 수 있는 SQL에서는 비용과 관계없이 거의 매번 fulltext 접근 방법 사용.
+		* 전문 검색 인덱스는 통계 정보가 관리되지 않기 때문에 전문 인덱스를 사용할 수 있는 SQL에서는 비용과 관계없이 거의 매번 fulltext 접근 방법 사용. p286-1
 * **ref_or_null**
 	* 
 * **unique_subquery**
@@ -137,7 +137,7 @@ WHERE e.emp_no=tb.emp_no;
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE2NTI5OTM5NCwxMzE0MzMxMjQ5LDE4Nz
+eyJoaXN0b3J5IjpbMTI2OTUwNTc4OCwxMzE0MzMxMjQ5LDE4Nz
 k5OTQ1NTMsLTE0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4
 MTg0MSwxMDc3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LD
 EyOTQwNjAzNzcsMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNzAy
