--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -129,15 +129,16 @@ WHERE e.emp_no=tb.emp_no;
 	* MySQL 전문 검색 인덱스를 사용해 레코드를 읽는 접근 방법.
 		* 전문 검색 인덱스는 통계 정보가 관리되지 않기 때문에 전문 인덱스를 사용할 수 있는 SQL에서는 비용과 관계없이 거의 매번 fulltext 접근 방법 사용. p286-1
 * **ref_or_null**
-	* 
+	* ref 접근방식과 같은데 NULL 비교가 추가된 형태
 * **unique_subquery**
+	* 
 * **index_subquery**
 * **range**
 * **index_merge**
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI2OTUwNTc4OCwxMzE0MzMxMjQ5LDE4Nz
+eyJoaXN0b3J5IjpbMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4Nz
 k5OTQ1NTMsLTE0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4
 MTg0MSwxMDc3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LD
 EyOTQwNjAzNzcsMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNzAy
