--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -131,18 +131,19 @@ WHERE e.emp_no=tb.emp_no;
 * **ref_or_null**
 	* ref 접근방식과 같은데 NULL 비교가 추가된 형태
 * **unique_subquery**
-	* 
+	* IN (subquery) 형태의 조건에서 subquery의 반환 값에는 중복이 없으므로 별도의 중복 제거 작업이 필요하지 않음.
 * **index_subquery**
+* 
 * **range**
 * **index_merge**
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4Nz
-k5OTQ1NTMsLTE0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4
-MTg0MSwxMDc3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LD
-EyOTQwNjAzNzcsMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNzAy
-Mzk2OCwxODU3NjcwNDE2LC03Nzc5MzA3MjcsNjg2MjMzNDA5LD
-EwNDY0ODg3MDYsLTEzMTM3MDUwNTQsLTEwNzc1NTUwMzEsMTk5
-NTM3Nzc0Nl19
+eyJoaXN0b3J5IjpbLTI4NTcyMzQ1MCwxNDE0NTI2MzY1LDEzMT
+QzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3
+NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEwNTkzODU0NC
+w4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNzA2LDE0NjAx
+OTc1MzIsNzI3MDIzOTY4LDE4NTc2NzA0MTYsLTc3NzkzMDcyNy
+w2ODYyMzM0MDksMTA0NjQ4ODcwNiwtMTMxMzcwNTA1NCwtMTA3
+NzU1NTAzMV19
 -->
