RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -133,13 +133,13 @@ WHERE e.emp_no=tb.emp_no;
 * **unique_subquery**
 	* IN (subquery) 형태의 조건에서 subquery의 반환 값에는 중복이 없으므로 별도의 중복 제거 작업이 필요하지 않음.
 * **index_subquery**
-* 
+	* IN (subquery) 형태의 조건에서 subquery의 반환 값에는 중복된 값이 있을 수 있지만 인덱스를 이용해 중복된 값을 제거할 수 있음.
 * **range**
 * **index_merge**
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI4NTcyMzQ1MCwxNDE0NTI2MzY1LDEzMT
+eyJoaXN0b3J5IjpbMTIxMTkzNzYyNywxNDE0NTI2MzY1LDEzMT
 QzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3
 NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEwNTkzODU0NC
 w4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNzA2LDE0NjAx
