RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -132,7 +132,8 @@ WHERE e.emp_no=tb.emp_no;
 	* ref 접근방식과 같은데 NULL 비교가 추가된 형태
 * **unique_subquery**
 	* 
-	* IN (subquery) 형태의 조건에서 subquery의 반환 값이 중복되지 않는 유니크한 값므로 별도의 중복 제거 작업이 필요하지 않음.
+	* IN (subquery) 형태의 조건에서 subquery의 반환 값이 중복되지 않는 유니크한 값일 때 사용하는 방법.
+	* 므로 별도의 중복 제거 작업이 필요하지 않음.
 * **index_subquery**
 	* IN (subquery) 형태의 조건에서 subquery의 반환 값에는 중복된 값이 있을 수 있지만 인덱스를 이용해 중복된 값을 제거할 수 있음.
 * **range**
@@ -140,11 +141,11 @@ WHERE e.emp_no=tb.emp_no;
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTgxMTE2MzgxLDE0MTQ1MjYzNjUsMTMxND
-MzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0
-NDQxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOCwtMTA1OTM4NTQ0LD
-gyNDk4NTA5NywxMjk0MDYwMzc3LDE0OTI3NTM3MDYsMTQ2MDE5
-NzUzMiw3MjcwMjM5NjgsMTg1NzY3MDQxNiwtNzc3OTMwNzI3LD
-Y4NjIzMzQwOSwxMDQ2NDg4NzA2LC0xMzEzNzA1MDU0LC0xMDc3
-NTU1MDMxXX0=
+eyJoaXN0b3J5IjpbMjA2MTQ5NTE0NiwxNDE0NTI2MzY1LDEzMT
+QzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3
+NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEwNTkzODU0NC
+w4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNzA2LDE0NjAx
+OTc1MzIsNzI3MDIzOTY4LDE4NTc2NzA0MTYsLTc3NzkzMDcyNy
+w2ODYyMzM0MDksMTA0NjQ4ODcwNiwtMTMxMzcwNTA1NCwtMTA3
+NzU1NTAzMV19
 -->
