RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -131,17 +131,17 @@ WHERE e.emp_no=tb.emp_no;
 * **ref_or_null**
 	* ref 접근방식과 같은데 NULL 비교가 추가된 형태
 * **unique_subquery**
-	* 
 	* IN (subquery) 형태의 조건에서 subquery의 반환 값이 중복되지 않는 유니크한 값일 때 사용하는 방법.
-	* 므로 별도의 중복 제거 작업이 필요하지 않음.
+	* 별도의 중복 제거 작업이 필요하지 않음. (?)
 * **index_subquery**
+	* IN 연산자 특성상 목록에서 중복된 값이 먼저 제거되어야 한다.
 	* IN (subquery) 형태의 조건에서 subquery의 반환 값에는 중복된 값이 있을 수 있지만 인덱스를 이용해 중복된 값을 제거할 수 있음.
 * **range**
 * **index_merge**
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA2MTQ5NTE0NiwxNDE0NTI2MzY1LDEzMT
+eyJoaXN0b3J5IjpbLTY2MTY3Mzc0NCwxNDE0NTI2MzY1LDEzMT
 QzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3
 NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEwNTkzODU0NC
 w4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNzA2LDE0NjAx
