RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -137,15 +137,16 @@ WHERE e.emp_no=tb.emp_no;
 	* IN 연산자 특성상 목록에서 중복된 값이 먼저 제거되어야 한다.
 	* IN (subquery) 형태의 조건에서 subquery의 반환 값에는 중복된 값이 있을 수 있지만 인덱스를 이용해 중복된 값을 제거할 수 있는 경우 사용하는 방법.
 * **range**
+	* 
 * **index_merge**
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMT
-QzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3
-NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEwNTkzODU0NC
-w4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNzA2LDE0NjAx
-OTc1MzIsNzI3MDIzOTY4LDE4NTc2NzA0MTYsLTc3NzkzMDcyNy
-w2ODYyMzM0MDksMTA0NjQ4ODcwNiwtMTMxMzcwNTA1NCwtMTA3
-NzU1NTAzMV19
+eyJoaXN0b3J5IjpbNDg1MTQ5MDM2LDEzNjI5MzY1ODgsMTQxND
+UyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3
+NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC
+0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNzcsMTQ5Mjc1
+MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxODU3NjcwNDE2LC
+03Nzc5MzA3MjcsNjg2MjMzNDA5LDEwNDY0ODg3MDYsLTEzMTM3
+MDUwNTRdfQ==
 -->
