RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -137,16 +137,16 @@ WHERE e.emp_no=tb.emp_no;
 	* IN 연산자 특성상 목록에서 중복된 값이 먼저 제거되어야 한다.
 	* IN (subquery) 형태의 조건에서 subquery의 반환 값에는 중복된 값이 있을 수 있지만 인덱스를 이용해 중복된 값을 제거할 수 있는 경우 사용하는 방법.
 * **range**
-	* 
+	* 인덱스 레인지 스캔 형태의 접근 방식. 인덱스를 하나의 값이 아닌 범위로 겁색하는 경우를 의미.
 * **index_merge**
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDg1MTQ5MDM2LDEzNjI5MzY1ODgsMTQxND
-UyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3
-NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC
-0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNzcsMTQ5Mjc1
-MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxODU3NjcwNDE2LC
-03Nzc5MzA3MjcsNjg2MjMzNDA5LDEwNDY0ODg3MDYsLTEzMTM3
-MDUwNTRdfQ==
+eyJoaXN0b3J5IjpbLTEyNDUwMTU4MzcsMTM2MjkzNjU4OCwxND
+E0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0
+ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMD
+gsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDky
+NzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NTc2NzA0MT
+YsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcwNiwtMTMx
+MzcwNTA1NF19
 -->
