RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -138,15 +138,17 @@ WHERE e.emp_no=tb.emp_no;
 	* IN (subquery) 형태의 조건에서 subquery의 반환 값에는 중복된 값이 있을 수 있지만 인덱스를 이용해 중복된 값을 제거할 수 있는 경우 사용하는 방법.
 * **range**
 	* 인덱스 레인지 스캔 형태의 접근 방식. 인덱스를 하나의 값이 아닌 범위로 겁색하는 경우를 의미.
+	* 인덱스 레인지 스캔 : const, ref, range를 모두 묶어서 지칭
 * **index_merge**
+	* 2개 이상의 인덱스를 이용해 각각의 검색 결과를 만들어낸 후 그 결과를 병합하는 처리 방식.
 * **index**
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNDUwMTU4MzcsMTM2MjkzNjU4OCwxND
-E0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0
-ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMD
-gsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDky
-NzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NTc2NzA0MT
-YsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcwNiwtMTMx
-MzcwNTA1NF19
+eyJoaXN0b3J5IjpbLTI2MjIzNDkzOCwxMzYyOTM2NTg4LDE0MT
+Q1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4
+NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOC
+wtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3LDE0OTI3
+NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1NzY3MDQxNi
+wtNzc3OTMwNzI3LDY4NjIzMzQwOSwxMDQ2NDg4NzA2LC0xMzEz
+NzA1MDU0XX0=
 -->
