RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -143,13 +143,14 @@ WHERE e.emp_no=tb.emp_no;
 	* 2개 이상의 인덱스를 이용해 각각의 검색 결과를 만들어낸 후 그 결과를 병합하는 처리 방식. p290-1
 * **index**
 	* 인덱스를 처음부터 끝까지 읽는 인덱스 풀 스캔을 의미.
+	* ALL과 비교했을 때 비교하는 레코드 건수는 같으나 일반적으로 크
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzkxMTMwNDgzLDEzNjI5MzY1ODgsMTQxND
-UyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3
-NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC
-0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNzcsMTQ5Mjc1
-MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxODU3NjcwNDE2LC
-03Nzc5MzA3MjcsNjg2MjMzNDA5LDEwNDY0ODg3MDYsLTEzMTM3
-MDUwNTRdfQ==
+eyJoaXN0b3J5IjpbMTY2NjA2ODY4MCwxMzYyOTM2NTg4LDE0MT
+Q1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4
+NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOC
+wtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3LDE0OTI3
+NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1NzY3MDQxNi
+wtNzc3OTMwNzI3LDY4NjIzMzQwOSwxMDQ2NDg4NzA2LC0xMzEz
+NzA1MDU0XX0=
 -->
