RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -142,12 +142,15 @@ WHERE e.emp_no=tb.emp_no;
 * **index_merge**
 	* 2개 이상의 인덱스를 이용해 각각의 검색 결과를 만들어낸 후 그 결과를 병합하는 처리 방식. p290-1
 * **index**
-	* 인덱스를 처음부터 끝까지 읽는 인덱스 풀 스캔을 의미.
+	* 인덱스를 처음부터 끝까지 읽는 인덱스 풀 스캔을 의미. p291-1
 	* ALL과 비교했을 때 비교하는 레코드 건수는 같으나 일반적으로 크기가 작아서 풀테이블 스캔보다는 효율적.
-	* 다음의 
+	* 다음의 첫번째 + 두번째 또는 첫번째 + 세번째 조건을 충족하는 경우 사용
+		* range나 const 또는 ref와 같은 접근 방식으로 인덱스를 사용하지 못하는 경우
+		* 인덱스에 포함된 칼럼으로 처리할 수 있는 쿼리인 경우(데이터 파일을 읽지 않아도 되는 경우)
+		* 인덱스를 이용해 정
 * **ALL**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTI1OTA2MTc0LDEzNjI5MzY1ODgsMTQxND
+eyJoaXN0b3J5IjpbODEzMjc4OTExLDEzNjI5MzY1ODgsMTQxND
 UyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3
 NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC
 0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNzcsMTQ5Mjc1
