--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -145,12 +145,14 @@ WHERE e.emp_no=tb.emp_no;
 	* 인덱스를 처음부터 끝까지 읽는 인덱스 풀 스캔을 의미. p291-1
 	* ALL과 비교했을 때 비교하는 레코드 건수는 같으나 일반적으로 크기가 작아서 풀테이블 스캔보다는 효율적.
 	* 다음의 첫번째 + 두번째 또는 첫번째 + 세번째 조건을 충족하는 경우 사용
-		* range나 const 또는 ref와 같은 접근 방식으로 인덱스를 사용하지 못하는 경우
-		* 인덱스에 포함된 칼럼으로 처리할 수 있는 쿼리인 경우(데이터 파일을 읽지 않아도 되는 경우)
-		* 인덱스를 이용해 정
+		* 첫번째, range나 const 또는 ref와 같은 접근 방식으로 인덱스를 사용하지 못하는 경우
+		* 두번째, 인덱스에 포함된 칼럼으로 처리할 수 있는 쿼리인 경우(데이터 파일을 읽지 않아도 되는 경우)
+		* 세번째, 인덱스를 이용해 정렬이나 그룹핑 작업이 가능한 경우(별도의 정렬 작업을 피할 수 있는 경우)
 * **ALL**
+	* 풀 테이블 스캔 방식
+	* 한꺼번에 많은 페이지를 읽어들이는 기능 제공(InnoDB)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODEzMjc4OTExLDEzNjI5MzY1ODgsMTQxND
+eyJoaXN0b3J5IjpbLTQ5ODkzMDgzLDEzNjI5MzY1ODgsMTQxND
 UyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3
 NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC
 0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNzcsMTQ5Mjc1
