--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -150,9 +150,9 @@ WHERE e.emp_no=tb.emp_no;
 		* 세번째, 인덱스를 이용해 정렬이나 그룹핑 작업이 가능한 경우(별도의 정렬 작업을 피할 수 있는 경우)
 * **ALL**
 	* 풀 테이블 스캔 방식
-	* 한꺼번에 많은 페이지를 읽어들이는 기능 제공(InnoDB)
+	* 리드 어헤드(Read Ahead) 방식 : 한꺼번에 많은 페이지를 읽어들이는 기능 제공 (InnoDB)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ5ODkzMDgzLDEzNjI5MzY1ODgsMTQxND
+eyJoaXN0b3J5IjpbNzk4ODM0NTA5LDEzNjI5MzY1ODgsMTQxND
 UyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3
 NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC
 0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNzcsMTQ5Mjc1
