RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -151,8 +151,14 @@ WHERE e.emp_no=tb.emp_no;
 * **ALL**
 	* 풀 테이블 스캔 방식
 	* 리드 어헤드(Read Ahead) 방식 : 한꺼번에 많은 페이지를 읽어들이는 기능 제공 (InnoDB)
+### 6.2.5 possible_keys
+### 6.2.6 key
+### 6.2.7 key_len
+### 6.2.8 ref
+### 6.2.9 rows
+### 6.2.10
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzk4ODM0NTA5LDEzNjI5MzY1ODgsMTQxND
+eyJoaXN0b3J5IjpbOTA0NDc3OTk1LDEzNjI5MzY1ODgsMTQxND
 UyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3
 NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC
 0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNzcsMTQ5Mjc1
