RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -156,13 +156,16 @@ WHERE e.emp_no=tb.emp_no;
 ### 6.2.7 key_len
 ### 6.2.8 ref
 ### 6.2.9 rows
-### 6.2.10
+### 6.2.10 Extra
+### 6.2.11 EXPLAIN EXTENDED(Filterd 칼럼)
+### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
+### 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTA0NDc3OTk1LDEzNjI5MzY1ODgsMTQxND
-UyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3
-NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC
-0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNzcsMTQ5Mjc1
-MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxODU3NjcwNDE2LC
-03Nzc5MzA3MjcsNjg2MjMzNDA5LDEwNDY0ODg3MDYsLTEzMTM3
-MDUwNTRdfQ==
+eyJoaXN0b3J5IjpbMTQ2NDM3NzAyOSwxMzYyOTM2NTg4LDE0MT
+Q1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4
+NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOC
+wtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3LDE0OTI3
+NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1NzY3MDQxNi
+wtNzc3OTMwNzI3LDY4NjIzMzQwOSwxMDQ2NDg4NzA2LC0xMzEz
+NzA1MDU0XX0=
 -->
