RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -159,13 +159,13 @@ WHERE e.emp_no=tb.emp_no;
 ### 6.2.10 Extra
 ### 6.2.11 EXPLAIN EXTENDED(Filterd 칼럼)
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
-### 
+### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ2NDM3NzAyOSwxMzYyOTM2NTg4LDE0MT
-Q1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4
-NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOC
-wtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3LDE0OTI3
-NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1NzY3MDQxNi
-wtNzc3OTMwNzI3LDY4NjIzMzQwOSwxMDQ2NDg4NzA2LC0xMzEz
-NzA1MDU0XX0=
+eyJoaXN0b3J5IjpbLTE5MDU1NjA0NzMsMTM2MjkzNjU4OCwxND
+E0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0
+ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMD
+gsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDky
+NzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NTc2NzA0MT
+YsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcwNiwtMTMx
+MzcwNTA1NF19
 -->
