--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -152,8 +152,9 @@ WHERE e.emp_no=tb.emp_no;
 	* 풀 테이블 스캔 방식
 	* 리드 어헤드(Read Ahead) 방식 : 한꺼번에 많은 페이지를 읽어들이는 기능 제공 (InnoDB)
 ### 6.2.5 possible_keys
-MyS
+MySQL 옵티마이저가 최적의 실행 계획을 만들기 위해 후보로 선정했던 접근 방식에서 사용되는 인덱스 목록. 무시해도 좋음.
 ### 6.2.6 key
+
 ### 6.2.7 key_len
 ### 6.2.8 ref
 ### 6.2.9 rows
@@ -166,7 +167,7 @@ MyS
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU0MjQxNjI2NiwxMzYyOTM2NTg4LDE0MT
+eyJoaXN0b3J5IjpbMTUxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MT
 Q1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4
 NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOC
 wtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3LDE0OTI3
