--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -152,14 +152,14 @@ WHERE e.emp_no=tb.emp_no;
 	* 풀 테이블 스캔 방식
 	* 리드 어헤드(Read Ahead) 방식 : 한꺼번에 많은 페이지를 읽어들이는 기능 제공 (InnoDB)
 ### 6.2.5 possible_keys
-MySQL 옵티마이저가 최적의 실행 계획을 만들기 위해 후보로 선정했던 접근 방식에서 사용되는 인덱스 목록. 무시해도 좋음.
+* MySQL 옵티마이저가 최적의 실행 계획을 만들기 위해 후보로 선정했던 접근 방식에서 사용되는 인덱스 목록. 무시해도 좋음.
 ### 6.2.6 key
-최종 선택된 실행 계획에서 사용하는 인덱스. PRIMARY 또는 인덱스를 생성할 때 부여했던 고유 이름이 표시.
+* 최종 선택된 실행 계획에서 사용하는 인덱스. PRIMARY 또는 인덱스를 생성할 때 부여했던 고유 이름이 표시.
 ### 6.2.7 key_len
-다중 컬럼으로 구성된 인덱스에서 몇개의 칼럼(정확히는 인덱스의 각 레코드에서 몇바이트)까지 사용했는지 알려주는 정보. p293-1, p294-1
-MySQL5.0에서는 범위 조건으로 사용되는 칼럼만 스토리지 엔진으로 전달됐지만, 
+* 다중 컬럼으로 구성된 인덱스에서 몇개의 칼럼(정확히는 인덱스의 각 레코드에서 몇바이트)까지 사용했는지 알려주는 정보. p293-1, p294-1
+* MySQL5.0에서는 범위 조건으로 사용되는 칼럼만 스토리지 엔진으로 전달됐지만, MySQL5.1부터는 범위 제한 조건이든 체크 조건이든 관계없이, 인덱스를 이용할 수 만 있다면 모두 스토리지 엔진으로 전달하도록 바뀜.(컨디션 푸시 다운)
 ### 6.2.8 ref
-
+* 접근 방법이 ref 방식이면 참
 ### 6.2.9 rows
 ### 6.2.10 Extra
 
@@ -170,11 +170,11 @@ MySQL5.0에서는 범위 조건으로 사용되는 칼럼만 스토리지 엔진
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NTc1ODE1OTAsLTc0MjEzNjA1MywtOD
-kxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2
-MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NC
-wtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEw
-NTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNz
-A2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NTc2NzA0MTYsLTc3
-NzkzMDcyN119
+eyJoaXN0b3J5IjpbMTcxMDA2MTIxMiwtNzQyMTM2MDUzLC04OT
+EyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYz
+NjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC
+0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOCwtMTA1
+OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3LDE0OTI3NTM3MD
+YsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1NzY3MDQxNiwtNzc3
+OTMwNzI3XX0=
 -->
