RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -159,7 +159,8 @@ WHERE e.emp_no=tb.emp_no;
 * 다중 컬럼으로 구성된 인덱스에서 몇개의 칼럼(정확히는 인덱스의 각 레코드에서 몇바이트)까지 사용했는지 알려주는 정보. p293-1, p294-1
 * MySQL5.0에서는 범위 조건으로 사용되는 칼럼만 스토리지 엔진으로 전달됐지만, MySQL5.1부터는 범위 제한 조건이든 체크 조건이든 관계없이, 인덱스를 이용할 수 만 있다면 모두 스토리지 엔진으로 전달하도록 바뀜.(컨디션 푸시 다운)
 ### 6.2.8 ref
-* 접근 방법이 ref 방식이면 참
+* 접근 방법이 ref 방식이면 참조 조건(Equal 비교 조건)으로 어떤 값이 제공됐는지 보여 준다.
+	* const : 상수일 또는 해당 테이블 명과 칼럼 명이 표시)
 ### 6.2.9 rows
 ### 6.2.10 Extra
 
@@ -170,7 +171,7 @@ WHERE e.emp_no=tb.emp_no;
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcxMDA2MTIxMiwtNzQyMTM2MDUzLC04OT
+eyJoaXN0b3J5IjpbMTQ0NzY3NDc3NiwtNzQyMTM2MDUzLC04OT
 EyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYz
 NjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC
 0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOCwtMTA1
