RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -160,7 +160,9 @@ WHERE e.emp_no=tb.emp_no;
 * MySQL5.0에서는 범위 조건으로 사용되는 칼럼만 스토리지 엔진으로 전달됐지만, MySQL5.1부터는 범위 제한 조건이든 체크 조건이든 관계없이, 인덱스를 이용할 수 만 있다면 모두 스토리지 엔진으로 전달하도록 바뀜.(컨디션 푸시 다운)
 ### 6.2.8 ref
 * 접근 방법이 ref 방식이면 참조 조건(Equal 비교 조건)으로 어떤 값이 제공됐는지 보여 준다.
-	* const : 상수일 또는 해당 테이블 명과 칼럼 명이 표시)
+	* const : 상수일 때
+	*  해당 테이블 명과 칼럼 명이 표시
+	* func : 
 ### 6.2.9 rows
 ### 6.2.10 Extra
 
@@ -171,11 +173,11 @@ WHERE e.emp_no=tb.emp_no;
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ0NzY3NDc3NiwtNzQyMTM2MDUzLC04OT
-EyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYz
-NjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC
-0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOCwtMTA1
-OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3LDE0OTI3NTM3MD
-YsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1NzY3MDQxNiwtNzc3
-OTMwNzI3XX0=
+eyJoaXN0b3J5IjpbMjcwNDQ2NzQ3LC03NDIxMzYwNTMsLTg5MT
+I3NDE0NywxNTE1OTY2NTkwLDEzNjI5MzY1ODgsMTQxNDUyNjM2
+NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3NjQsLT
+E3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC0xMDU5
+Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNzcsMTQ5Mjc1MzcwNi
+wxNDYwMTk3NTMyLDcyNzAyMzk2OCwxODU3NjcwNDE2LC03Nzc5
+MzA3MjddfQ==
 -->
