RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -161,8 +161,9 @@ WHERE e.emp_no=tb.emp_no;
 ### 6.2.8 ref
 * 접근 방법이 ref 방식이면 참조 조건(Equal 비교 조건)으로 어떤 값이 제공됐는지 보여 준다.
 	* const : 상수일 때
-	*  해당 테이블 명과 칼럼 명이 표시
-	* func : 값을 그대로 사용한 것이 아니라 연산을 거쳐서 참조 됐을 경우
+	*  해당 테이블 명과 칼럼 명이 표시.p295-2
+	* func : 값을 그대로 사용한 것이 아니라 연산을 거쳐서 참조 됐을 경우.p296-1
+		* 사용자가 명시적으로
 ### 6.2.9 rows
 ### 6.2.10 Extra
 
@@ -173,7 +174,7 @@ WHERE e.emp_no=tb.emp_no;
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI3MTQzNTk4NiwtNzQyMTM2MDUzLC04OT
+eyJoaXN0b3J5IjpbLTg3OTQ1NDMxNSwtNzQyMTM2MDUzLC04OT
 EyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYz
 NjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC
 0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOCwtMTA1
