--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -163,8 +163,10 @@ WHERE e.emp_no=tb.emp_no;
 	* const : 상수일 때
 	*  해당 테이블 명과 칼럼 명이 표시.p295-2
 	* func : 값을 그대로 사용한 것이 아니라 연산을 거쳐서 참조 됐을 경우.p296-1
-		* 사용자가 명시적으로
+		* 사용자가 명시적으로 값을 변환할 경우
+		* MySQL 서버가 내부적으로 값을 변환해야 하는 경우 (타입 변환하는 경우). 가능하다면 조인 칼럼 타입 일치시키는 것이 좋음.
 ### 6.2.9 rows
+* 
 ### 6.2.10 Extra
 
 * **const row not found (MySQL 5.1부터)**
@@ -174,11 +176,11 @@ WHERE e.emp_no=tb.emp_no;
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg3OTQ1NDMxNSwtNzQyMTM2MDUzLC04OT
-EyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYz
-NjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC
-0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOCwtMTA1
-OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3LDE0OTI3NTM3MD
-YsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1NzY3MDQxNiwtNzc3
-OTMwNzI3XX0=
+eyJoaXN0b3J5IjpbLTE1NjA0MDY1MzUsLTc0MjEzNjA1MywtOD
+kxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2
+MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NC
+wtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEw
+NTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNz
+A2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NTc2NzA0MTYsLTc3
+NzkzMDcyN119
 -->
