RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -166,7 +166,7 @@ WHERE e.emp_no=tb.emp_no;
 		* 사용자가 명시적으로 값을 변환할 경우
 		* MySQL 서버가 내부적으로 값을 변환해야 하는 경우 (타입 변환하는 경우). 가능하다면 조인 칼럼 타입 일치시키는 것이 좋음.
 ### 6.2.9 rows
-* 
+* 실행 계획의 효율성 판단을 위해 예측했던 레코드 건수를 보여준다.
 ### 6.2.10 Extra
 
 * **const row not found (MySQL 5.1부터)**
@@ -176,7 +176,7 @@ WHERE e.emp_no=tb.emp_no;
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NjA0MDY1MzUsLTc0MjEzNjA1MywtOD
+eyJoaXN0b3J5IjpbLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtOD
 kxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2
 MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NC
 wtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEw
