--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -167,6 +167,9 @@ WHERE e.emp_no=tb.emp_no;
 		* MySQL 서버가 내부적으로 값을 변환해야 하는 경우 (타입 변환하는 경우). 가능하다면 조인 칼럼 타입 일치시키는 것이 좋음.
 ### 6.2.9 rows
 * 실행 계획의 효율성 판단을 위해 예측했던 레코드 건수를 보여준다.
+* 각 스토리 엔진별로 가지고 있는 통계 정보를 산출해 옵티마이저가 산출해 낸 예상 값. 정확하지 않음
+* 쿼리를 처리하기 위해 얼마나 많은 레코드를 디스크로부터 읽고 체크해야 하는지를 의미
+* 
 ### 6.2.10 Extra
 
 * **const row not found (MySQL 5.1부터)**
@@ -176,11 +179,11 @@ WHERE e.emp_no=tb.emp_no;
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtOD
-kxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2
-MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NC
-wtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEw
-NTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNz
-A2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4NTc2NzA0MTYsLTc3
-NzkzMDcyN119
+eyJoaXN0b3J5IjpbMTI0NDgyNzkyNywtMTY4MDI2NDgwMywtNz
+QyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2
+NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC
+0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3
+NzAzNjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMz
+c3LDE0OTI3NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1
+NzY3MDQxNl19
 -->
