--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -169,7 +169,14 @@ WHERE e.emp_no=tb.emp_no;
 * 실행 계획의 효율성 판단을 위해 예측했던 레코드 건수를 보여준다.
 * 각 스토리 엔진별로 가지고 있는 통계 정보를 산출해 옵티마이저가 산출해 낸 예상 값. 정확하지 않음
 * 쿼리를 처리하기 위해 얼마나 많은 레코드를 디스크로부터 읽고 체크해야 하는지를 의미
-* 
+
+```
+EXPLAIN
+SELECT * FROM dept_emo WHERE from_date>='1985-01-01';
+```
+|id|select_type|table|type|Key|Key_len|ref|rows|Extra|
+|--|----------|-----|----|---|-------|---|----|-----|
+|1|SIMPLE|dept_emp|ALL||||10420||
 ### 6.2.10 Extra
 
 * **const row not found (MySQL 5.1부터)**
@@ -179,11 +186,11 @@ WHERE e.emp_no=tb.emp_no;
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI0NDgyNzkyNywtMTY4MDI2NDgwMywtNz
-QyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2
-NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC
-0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3
-NzAzNjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMz
-c3LDE0OTI3NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1
-NzY3MDQxNl19
+eyJoaXN0b3J5IjpbLTE0NDg5ODk1MDYsLTE2ODAyNjQ4MDMsLT
+c0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2Mjkz
+NjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1My
+wtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEw
+NzcwMzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MD
+M3NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4
+NTc2NzA0MTZdfQ==
 -->
