--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -169,14 +169,23 @@ WHERE e.emp_no=tb.emp_no;
 * 실행 계획의 효율성 판단을 위해 예측했던 레코드 건수를 보여준다.
 * 각 스토리 엔진별로 가지고 있는 통계 정보를 산출해 옵티마이저가 산출해 낸 예상 값. 정확하지 않음
 * 쿼리를 처리하기 위해 얼마나 많은 레코드를 디스크로부터 읽고 체크해야 하는지를 의미
-
+* ex
 ```
 EXPLAIN
 SELECT * FROM dept_emo WHERE from_date>='1985-01-01';
 ```
 |id|select_type|table|type|Key|Key_len|ref|rows|Extra|
 |--|----------|-----|----|---|-------|---|----|-----|
-|1|SIMPLE|dept_emp|ALL||||10420||
+|1|SIMPLE|dept_emp|ALL|ix_fromdate|||334868|Using where|
+
+
+```
+EXPLAIN
+SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
+```
+|id|select_type|table|type|Key|Key_len|ref|rows|Extra|
+|--|----------|-----|----|---|-------|---|----|-----|
+|1|SIMPLE|dept_emp||ix_fromdate|||334868|Using where|
 ### 6.2.10 Extra
 
 * **const row not found (MySQL 5.1부터)**
@@ -186,11 +195,11 @@ SELECT * FROM dept_emo WHERE from_date>='1985-01-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NDg5ODk1MDYsLTE2ODAyNjQ4MDMsLT
-c0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2Mjkz
-NjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1My
-wtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEw
-NzcwMzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MD
-M3NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4
-NTc2NzA0MTZdfQ==
+eyJoaXN0b3J5IjpbODE2MjM4NDkyLC0xNjgwMjY0ODAzLC03ND
+IxMzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2NTkwLDEzNjI5MzY1
+ODgsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLT
+E0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3
+MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNz
+csMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxODU3
+NjcwNDE2XX0=
 -->
