RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -174,9 +174,9 @@ WHERE e.emp_no=tb.emp_no;
 EXPLAIN
 SELECT * FROM dept_emo WHERE from_date>='1985-01-01';
 ```
-|id|select_type|table|type|Key|Key_len|ref|rows|Extra|
-|--|----------|-----|----|---|-------|---|----|-----|
-|1|SIMPLE|dept_emp|ALL|ix_fromdate|||334868|Using where|
+|id|select_type|table|type|possible_keys|Key|Key_len|ref|rows|Extra|
+|--|----------|-----|----|---|---|-------|---|----|-----|
+|1|SIMPLE|dept_emp|ALL|ix_fromdate||||334868|Using where|
 
 
 ```
@@ -185,7 +185,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ```
 |id|select_type|table|type|Key|Key_len|ref|rows|Extra|
 |--|----------|-----|----|---|-------|---|----|-----|
-|1|SIMPLE|dept_emp||ix_fromdate|||334868|Using where|
+|1|SIMPLE|dept_emp|range|ix_fromdate|ix_fromdate|3|334868|Using where|
 ### 6.2.10 Extra
 
 * **const row not found (MySQL 5.1부터)**
@@ -195,11 +195,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODE2MjM4NDkyLC0xNjgwMjY0ODAzLC03ND
-IxMzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2NTkwLDEzNjI5MzY1
-ODgsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLT
-E0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3
-MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNz
-csMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxODU3
-NjcwNDE2XX0=
+eyJoaXN0b3J5IjpbLTE3ODkzMzU5NjcsLTE2ODAyNjQ4MDMsLT
+c0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2Mjkz
+NjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1My
+wtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEw
+NzcwMzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MD
+M3NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4
+NTc2NzA0MTZdfQ==
 -->
