--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -169,7 +169,7 @@ WHERE e.emp_no=tb.emp_no;
 * 실행 계획의 효율성 판단을 위해 예측했던 레코드 건수를 보여준다.
 * 각 스토리 엔진별로 가지고 있는 통계 정보를 산출해 옵티마이저가 산출해 낸 예상 값. 정확하지 않음
 * 쿼리를 처리하기 위해 얼마나 많은 레코드를 디스크로부터 읽고 체크해야 하는지를 의미
-* ex
+* ex)
 ```
 EXPLAIN
 SELECT * FROM dept_emo WHERE from_date>='1985-01-01';
@@ -178,14 +178,15 @@ SELECT * FROM dept_emo WHERE from_date>='1985-01-01';
 |--|----------|-----|----|---|---|-------|---|----|-----|
 |1|SIMPLE|dept_emp|ALL|ix_fromdate||||334868|Using where|
 
-
+* dd
+	* 
 ```
 EXPLAIN
 SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ```
-|id|select_type|table|type|Key|Key_len|ref|rows|Extra|
-|--|----------|-----|----|---|-------|---|----|-----|
-|1|SIMPLE|dept_emp|range|ix_fromdate|ix_fromdate|3|334868|Using where|
+|id|select_type|table|type|possible_keys|Key|Key_len|ref|rows|Extra|
+|--|----------|-----|----|---|---|-------|---|----|-----|
+|1|SIMPLE|dept_emp|range|ix_fromdate|ix_fromdate|3||292|Using where|
 ### 6.2.10 Extra
 
 * **const row not found (MySQL 5.1부터)**
@@ -195,7 +196,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3ODkzMzU5NjcsLTE2ODAyNjQ4MDMsLT
+eyJoaXN0b3J5IjpbLTIxMDgzODUxNjgsLTE2ODAyNjQ4MDMsLT
 c0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2Mjkz
 NjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1My
 wtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEw
