RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -178,8 +178,8 @@ SELECT * FROM dept_emo WHERE from_date>='1985-01-01';
 |--|----------|-----|----|---|---|-------|---|----|-----|
 |1|SIMPLE|dept_emp|ALL|ix_fromdate||||334868|Using where|
 
-* dd
-	* 
+* 
+* 따라서 옵티마이저는 인덱스 레인지 스캔이 아니라 풀 테이블 스캔을 선택.
 ```
 EXPLAIN
 SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
@@ -196,11 +196,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMDgzODUxNjgsLTE2ODAyNjQ4MDMsLT
-c0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2Mjkz
-NjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1My
-wtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEw
-NzcwMzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MD
-M3NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4
-NTc2NzA0MTZdfQ==
+eyJoaXN0b3J5IjpbNjQ3MTU1NzMzLC0xNjgwMjY0ODAzLC03ND
+IxMzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2NTkwLDEzNjI5MzY1
+ODgsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLT
+E0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3
+MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNz
+csMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxODU3
+NjcwNDE2XX0=
 -->
