RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -178,8 +178,8 @@ SELECT * FROM dept_emo WHERE from_date>='1985-01-01';
 |--|----------|-----|----|---|---|-------|---|----|-----|
 |1|SIMPLE|dept_emp|ALL|ix_fromdate||||334868|Using where|
 
-* 
-* 따라서 옵티마이저는 인덱스 레인지 스캔이 아니라 풀 테이블 스캔을 선택.
+* 이 쿼리를 처리하기 위해 대략 334,868건의 레코드를 읽어야 할 것이라 예측. 
+* dept_emp 테이블의 전체 레코드가 331,603건 임을 고려한 옵티마이저는 인덱스 레인지 스캔이 아니라 풀 테이블 스캔을 선택.
 ```
 EXPLAIN
 SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
@@ -196,11 +196,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjQ3MTU1NzMzLC0xNjgwMjY0ODAzLC03ND
-IxMzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2NTkwLDEzNjI5MzY1
-ODgsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLT
-E0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3
-MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LDEyOTQwNjAzNz
-csMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxODU3
-NjcwNDE2XX0=
+eyJoaXN0b3J5IjpbLTY0MDU3MDQ5NywtMTY4MDI2NDgwMywtNz
+QyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2
+NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC
+0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3
+NzAzNjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMz
+c3LDE0OTI3NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1
+NzY3MDQxNl19
 -->
