RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -179,7 +179,7 @@ SELECT * FROM dept_emo WHERE from_date>='1985-01-01';
 |1|SIMPLE|dept_emp|ALL|ix_fromdate||||334868|Using where|
 
 * 이 쿼리를 처리하기 위해 대략 334,868건의 레코드를 읽어야 할 것이라 예측. 
-* dept_emp 테이블의 전체 레코드가 331,603건 임을 고려한 옵티마이저는 인덱스 레인지 스캔이 아니라 풀 테이블 스캔을 선택.
+* dept_emp 테이블의 전체 레코드가 331,603건 임을 고려하여 옵티마이저는 인덱스 레인지 스캔이 아니라 풀 테이블 스캔을 선택.
 ```
 EXPLAIN
 SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
@@ -187,8 +187,10 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 |id|select_type|table|type|possible_keys|Key|Key_len|ref|rows|Extra|
 |--|----------|-----|----|---|---|-------|---|----|-----|
 |1|SIMPLE|dept_emp|range|ix_fromdate|ix_fromdate|3||292|Using where|
+* 이 쿼리를 처리하기 위해 대략 292건의 레코드를 읽어야 할 것이라 예측. 
+* 옵티마이저는 익덱스 레인지 스캔을 선택.
 ### 6.2.10 Extra
-
+쿼리의 실행 꼐획에서 성능
 * **const row not found (MySQL 5.1부터)**
 * **Distinct**
 * **Full scan on NULL key**
@@ -196,7 +198,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY0MDU3MDQ5NywtMTY4MDI2NDgwMywtNz
+eyJoaXN0b3J5IjpbLTUwNjQyMjA4OCwtMTY4MDI2NDgwMywtNz
 QyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2
 NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC
 0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3
