RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -190,7 +190,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * 이 쿼리를 처리하기 위해 대략 292건의 레코드를 읽어야 할 것이라 예측. 
 * 옵티마이저는 익덱스 레인지 스캔을 선택.
 ### 6.2.10 Extra
-쿼리의 실행 꼐획에서 성능
+쿼리의 실행 꼐획에서 성능에 관련된 둥요한 내용이 eXTRA 칼럼에 자주 표시.
 * **const row not found (MySQL 5.1부터)**
 * **Distinct**
 * **Full scan on NULL key**
@@ -198,7 +198,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUwNjQyMjA4OCwtMTY4MDI2NDgwMywtNz
+eyJoaXN0b3J5IjpbLTczMDE2MDcwMiwtMTY4MDI2NDgwMywtNz
 QyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2
 NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC
 0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3
