RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -190,7 +190,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * 이 쿼리를 처리하기 위해 대략 292건의 레코드를 읽어야 할 것이라 예측. 
 * 옵티마이저는 익덱스 레인지 스캔을 선택.
 ### 6.2.10 Extra
-쿼리의 실행 꼐획에서 성능에 관련된 둥요한 내용이 eXTRA 칼럼에 자주 표시.
+쿼리의 실행 계획에서 성능에 관련된 둥요한 내용이 eXTRA 칼럼에 자주 표시.
 * **const row not found (MySQL 5.1부터)**
 * **Distinct**
 * **Full scan on NULL key**
@@ -198,11 +198,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTczMDE2MDcwMiwtMTY4MDI2NDgwMywtNz
-QyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2
-NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC
-0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3
-NzAzNjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMz
-c3LDE0OTI3NTM3MDYsMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1
-NzY3MDQxNl19
+eyJoaXN0b3J5IjpbLTE3MDc5ODUwMzQsLTE2ODAyNjQ4MDMsLT
+c0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2Mjkz
+NjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1My
+wtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEw
+NzcwMzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5NDA2MD
+M3NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4LDE4
+NTc2NzA0MTZdfQ==
 -->
