RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -192,17 +192,18 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.10 Extra
 쿼리의 실행 계획에서 성능에 관련된 둥요한 내용이 Extra 칼럼에 자주 표시.
 * **const row not found (MySQL 5.1부터)**
+	* 
 * **Distinct**
 * **Full scan on NULL key**
 ### 6.2.11 EXPLAIN EXTENDED(Filterd 칼럼)
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMT
-Y4MDI2NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2
-NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OS
-wxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1
-NDA4ODE4NDEsMTA3NzAzNjEwOCwtMTA1OTM4NTQ0LDgyNDk4NT
-A5NywxMjk0MDYwMzc3LDE0OTI3NTM3MDYsMTQ2MDE5NzUzMiw3
-MjcwMjM5NjhdfQ==
+eyJoaXN0b3J5IjpbNzI1MDc1NTc0LDIwMTQxNjc5NTgsLTE3MD
+c5ODUwMzQsLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0
+MTQ3LDE1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LD
+EzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcy
+NzU3NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEwNTkzOD
+U0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNzA2LDE0
+NjAxOTc1MzJdfQ==
 -->
