--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -192,18 +192,19 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.10 Extra
 쿼리의 실행 계획에서 성능에 관련된 둥요한 내용이 Extra 칼럼에 자주 표시.
 * **const row not found (MySQL 5.1부터)**
-	* 
+	* const 접근 방식으로 테이블을 읽었지만 실제로 해당 테이블에 레코드가 1건도 존재하지 않는 경우
 * **Distinct**
+	* 
 * **Full scan on NULL key**
 ### 6.2.11 EXPLAIN EXTENDED(Filterd 칼럼)
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzI1MDc1NTc0LDIwMTQxNjc5NTgsLTE3MD
-c5ODUwMzQsLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0
-MTQ3LDE1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LD
-EzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcy
-NzU3NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEwNTkzOD
-U0NCw4MjQ5ODUwOTcsMTI5NDA2MDM3NywxNDkyNzUzNzA2LDE0
-NjAxOTc1MzJdfQ==
+eyJoaXN0b3J5IjpbLTE4MTU4MzM5MTQsMjAxNDE2Nzk1OCwtMT
+cwNzk4NTAzNCwtMTY4MDI2NDgwMywtNzQyMTM2MDUzLC04OTEy
+NzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYzNj
+UsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC0x
+NzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOCwtMTA1OT
+M4NTQ0LDgyNDk4NTA5NywxMjk0MDYwMzc3LDE0OTI3NTM3MDYs
+MTQ2MDE5NzUzMl19
 -->
