--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -1,9 +1,16 @@
 # 12. 쿼리 종류별 잠금
+## 목차
 * InnodDB의 기본 잠금 방식
 * SQL 문장별로 사용하는 잠금
 * InnoDB에서 데드락 만들기
 
+## 시작하기
+* MySQL은 여러가지 스토리지 엔진을 사용할 수 있다.
+* 각각의 스토리지 엔진이 모두 서로 각자의 잠금과 트랜잭션 기능을 지원하고 있다.
+* 그래서 MySQL에서는 Lock과 관련된 문제를 다루기가 조금 까다롭다.
 
+## 목적
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMTE0NjM5NjhdfQ==
+eyJoaXN0b3J5IjpbLTE3NDQ2NTMzODJdfQ==
 -->
