RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -10,7 +10,10 @@
 * 그래서 MySQL에서는 Lock과 관련된 문제를 다루기가 조금 까다롭다.
 
 ## 목적
-* 
+* Lock에 대한 이해를 통해 Lock wait을 조금이라도 줄이고 빠른 속도로 처리되도록 쿼리를 개선하자.
+* SQL 문장별로 어떤 잠금이 사용되는지, 어떻게 우회할 수 있는지 살펴보자.
+
+# InnoDB의 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NDQ2NTMzODJdfQ==
+eyJoaXN0b3J5IjpbMjk0MjMwMzEyXX0=
 -->
