RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -13,7 +13,16 @@
 * Lock에 대한 이해를 통해 Lock wait을 조금이라도 줄이고 빠른 속도로 처리되도록 쿼리를 개선하자.
 * SQL 문장별로 어떤 잠금이 사용되는지, 어떻게 우회할 수 있는지 살펴보자.
 
-# InnoDB의 
+# 12.1 InnoDB의 기본 잠금 방식
+* InnoDB에서는 각 쿼리의 패턴별로 사용하는 잠금이 다르다.
+* 평소에 잠금을 사용하지 않는 쿼리가 어떠한 기능이 추가되면서 잠금을 사용하게 되는 등 복잡한 부분이 있어서 주의해야 한다.
+
+## SELECT
+
+
+## INSERT, UPDATE, DELETE
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjk0MjMwMzEyXX0=
+eyJoaXN0b3J5IjpbLTEzNTQ4NDQ3NDBdfQ==
 -->
