RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -1,8 +1,8 @@
-# 12. 쿼리 종류별 잠금
+# 12. 쿼리 종류별 lock
 ## 목차
-* InnodDB의 기본 잠금 방식
-* SQL 문장별로 사용하는 잠금
-* InnoDB에서 데드락 만들기
+* InnodDB의 기본 lock 방식
+* SQL 문장별로 사용하는 lock
+* InnoDB에서 deadlock 만들기
 
 ## 시작하기
 * MySQL은 여러가지 스토리지 엔진을 사용할 수 있다.
@@ -14,15 +14,22 @@
 * SQL 문장별로 어떤 잠금이 사용되는지, 어떻게 우회할 수 있는지 살펴보자.
 
 # 12.1 InnoDB의 기본 잠금 방식
-* InnoDB에서는 각 쿼리의 패턴별로 사용하는 잠금이 다르다.
-* 평소에 잠금을 사용하지 않는 쿼리가 어떠한 기능이 추가되면서 잠금을 사용하게 되는 등 복잡한 부분이 있어서 주의해야 한다.
+* InnoDB에서는 각 쿼리의 패턴별로 사용하는 lock이 다르다.
+* 평소에 lock을 사용하지 않는 쿼리가 어떠한 기능이 추가되면서 lock을 사용하게 되는 등 복잡한 부분이 있어서 주의해야 한다.
 
 ## SELECT
 
 
 ## INSERT, UPDATE, DELETE
 
+# 12.2 SQL 문장별로 사용하는 lock
 
+## SELECT 쿼리의 lock
+### SELECT ... FROM ...
+### SELECT ... FROM ... LOCK IN SHARE MODE
+### SELECT ... FROM ... FOR UPDATE
+
+## INSERT 쿼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNTQ4NDQ3NDBdfQ==
+eyJoaXN0b3J5IjpbOTY3NzYzNjQ4XX0=
 -->
