RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -29,7 +29,21 @@
 ### SELECT ... FROM ... LOCK IN SHARE MODE
 ### SELECT ... FROM ... FOR UPDATE
 
-## INSERT 쿼
+## INSERT 쿼리의 lock
+### INSERT ...
+
+### INSERT INTO ... ON DUPLICATE KEY UPDATE ...
+
+### REPLACE ...
+
+
+### INSERT INTO tb_new ... SELECT ... FROM tb_old ...
+
+### REPLACE INTO tb_new ... SELECT ... FROM tb_old ...
+
+## UPDATE 쿼리의 lock
+
+### UPDATE ... WHERE ...
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTY3NzYzNjQ4XX0=
+eyJoaXN0b3J5IjpbLTE4Njc2MDk1NzRdfQ==
 -->
