RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -44,6 +44,21 @@
 ## UPDATE 쿼리의 lock
 
 ### UPDATE ... WHERE ...
+
+### UPDATE tb_test1 a, tb_test2 b ON ... SET a.column = b.column ...
+
+## DELETE 쿼리의 lock
+
+### DELETE FROM ... WHERE ...
+### DELETE a FROM tb_test1 a, tb_test2 b ...
+
+## DDL 문장의 lock
+### CREATE TABLE tb_new ... SELECT ... FROM tb_old ...
+
+### RENAME TABLE tb_test TO tb_Backup, tb_swap TO tb_test, ...
+
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4Njc2MDk1NzRdfQ==
+eyJoaXN0b3J5IjpbLTE1NzYyOTk3OTldfQ==
 -->
