RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -58,7 +58,20 @@
 ### RENAME TABLE tb_test TO tb_Backup, tb_swap TO tb_test, ...
 
 
+## InnoDB에서 여러 쿼리 패턴 간의 lock wait
+
+
+# 12.3 InnoDB에서 deadlock 만들기
+
+## 패턴1 (상호 거래 관련)
+
+## 패턴2 (유니크 인덱스 관련)
+
+## 패턴3 (외래키 관련)
+
+## 패턴4 (서로 다른 인덱스를 통한 잠금)
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NzYyOTk3OTldfQ==
+eyJoaXN0b3J5IjpbMTczNDkyMjQzNV19
 -->
