RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -18,7 +18,7 @@
 * 평소에 lock을 사용하지 않는 쿼리가 어떠한 기능이 추가되면서 lock을 사용하게 되는 등 복잡한 부분이 있어서 주의해야 한다.
 
 ## SELECT
-
+* REPEATABLE-READ 이하 transaction isolation level에서는 
 
 ## INSERT, UPDATE, DELETE
 
@@ -73,5 +73,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTczNDkyMjQzNV19
+eyJoaXN0b3J5IjpbMTU4MzA3NjQ3MSwxNzM0OTIyNDM1XX0=
 -->
