RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -18,7 +18,10 @@
 * 평소에 lock을 사용하지 않는 쿼리가 어떠한 기능이 추가되면서 lock을 사용하게 되는 등 복잡한 부분이 있어서 주의해야 한다.
 
 ## SELECT
-* REPEATABLE-READ 이하 transaction isolation level에서는 
+* REPEATABLE-READ 이하 transaction isolation level에서는 Lock을 사용하지 않는다.
+* 이미 lock 상태의 record를 읽는 것도 제약이 없다.
+* SERIALIABLE isolation level에서는 모든 SELECT 쿼리에 LOCK IN SHARE MODE가 덧붙여진다. (read lock을 걸고 실행됨, 성능 저하 발생.)
+* 
 
 ## INSERT, UPDATE, DELETE
 
@@ -73,5 +76,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU4MzA3NjQ3MSwxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbMTY4MDI2NTkyMCwxNzM0OTIyNDM1XX0=
 -->
