--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -21,7 +21,10 @@
 * REPEATABLE-READ 이하 transaction isolation level에서는 Lock을 사용하지 않는다.
 * 이미 lock 상태의 record를 읽는 것도 제약이 없다.
 * SERIALIABLE isolation level에서는 모든 SELECT 쿼리에 LOCK IN SHARE MODE가 덧붙여진다. (read lock을 걸고 실행됨, 성능 저하 발생.)
-* 
+### SELECT로 읽은 record에 lock을 거는 방법
+* read-mode
+	`SELECT * FROM employees WHERE emp_no =
+* write-mode
 
 ## INSERT, UPDATE, DELETE
 
@@ -76,5 +79,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY4MDI2NTkyMCwxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbLTUxMzc4ODQwNCwxNzM0OTIyNDM1XX0=
 -->
