RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -21,10 +21,18 @@
 * REPEATABLE-READ 이하 transaction isolation level에서는 Lock을 사용하지 않는다.
 * 이미 lock 상태의 record를 읽는 것도 제약이 없다.
 * SERIALIABLE isolation level에서는 모든 SELECT 쿼리에 LOCK IN SHARE MODE가 덧붙여진다. (read lock을 걸고 실행됨, 성능 저하 발생.)
+
 ### SELECT로 읽은 record에 lock을 거는 방법
 * read-mode
-	`SELECT * FROM employees WHERE emp_no =
+	`SELECT * FROM employees WHERE emp_no = 10001 LOCK IN SHARE MODE;`
 * write-mode
+	`SELECT * FROM employees WHERE emp_no = 10001 FOR UPDATE;`
+
+- 위 두가지 방식 모두 다른 트랜잭션에서 변경하지 못하게 막는다.
+- read-mode는 읽기에 대해서만 lock을 획득한 상태라서, 해당 레코드를 변경하려면 다시 write-
+
+
+
 
 ## INSERT, UPDATE, DELETE
 
@@ -79,5 +87,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUxMzc4ODQwNCwxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbODI3MjM5MjM2LDE3MzQ5MjI0MzVdfQ==
 -->
