RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -29,7 +29,11 @@
 	`SELECT * FROM employees WHERE emp_no = 10001 FOR UPDATE;`
 
 - 위 두가지 방식 모두 다른 트랜잭션에서 변경하지 못하게 막는다.
-- read-mode는 읽기에 대해서만 lock을 획득한 상태라서, 해당 레코드를 변경하려면 다시 write-
+- read-mode는 읽기에 대해서만 lock을 획득한 상태라서, 해당 레코드를 변경하려면 다시 write-lock을 획득해야 한다.
+	- deadlock을 유발하는 가장 일반적인 형태.
+	- 읽은 뒤 변경해야 한다면 처음부터 FOR UPDATE를 사용하자.
+	- write-lock은 다른 트랜잭션에 대한 영향도가 크기 때문에, 반드시 읽고 나서 변경이 필요할 때만 사용하자.
+	- 
 
 
 
@@ -87,5 +91,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODI3MjM5MjM2LDE3MzQ5MjI0MzVdfQ==
+eyJoaXN0b3J5IjpbLTIwNTM2NDg2MTEsMTczNDkyMjQzNV19
 -->
