RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -33,8 +33,9 @@
 	- deadlock을 유발하는 가장 일반적인 형태.
 	- 읽은 뒤 변경해야 한다면 처음부터 FOR UPDATE를 사용하자.
 	- write-lock은 다른 트랜잭션에 대한 영향도가 크기 때문에, 반드시 읽고 나서 변경이 필요할 때만 사용하자.
-	- 
-
+- 위의 lock 방식들은 commit, rollback이 실행되면 잠금이 해제된다. 반드시 한 트랜잭션 내에서만 유효하다는 점을 기억하라.
+- 아래와 같은 경우에는 사용할 수 없다.
+```
 
 
 
@@ -91,5 +92,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNTM2NDg2MTEsMTczNDkyMjQzNV19
+eyJoaXN0b3J5IjpbLTYyNzUyNzAxNCwxNzM0OTIyNDM1XX0=
 -->
