RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -35,6 +35,11 @@
 	- write-lock은 다른 트랜잭션에 대한 영향도가 크기 때문에, 반드시 읽고 나서 변경이 필요할 때만 사용하자.
 - 위의 lock 방식들은 commit, rollback이 실행되면 잠금이 해제된다. 반드시 한 트랜잭션 내에서만 유효하다는 점을 기억하라.
 - 아래와 같은 경우에는 사용할 수 없다.
+```mermaid
+sequenceDiagram
+사용자 ->> 웹서버 : 요청1
+웹서버 ->> MySQL : 
+MySQL ->> 웹서버 : ㅇ
 ```
 
 
@@ -92,5 +97,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYyNzUyNzAxNCwxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbLTEzNTUxNjQwMjUsMTczNDkyMjQzNV19
 -->
