RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -38,8 +38,14 @@
 ```mermaid
 sequenceDiagram
 사용자 ->> 웹서버 : 요청1
-웹서버 ->> MySQL : 
-MySQL ->> 웹서버 : ㅇ
+웹서버 ->> MySQL : SELECT ... FOR UPDATE
+MySQL ->> 웹서버 : 
+웹서버 ->> 사용자 : 응답1
+사용자 ->> 웹서버 : 요청2
+웹서버 ->> MySQL : UPDATE
+웹서버 ->> MySQL : COMMIT
+MySQL ->> 웹서버 : 
+웹서버 ->> 사용자 : 응답2
 ```
 
 
@@ -97,5 +103,5 @@ MySQL ->> 웹서버 : ㅇ
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNTUxNjQwMjUsMTczNDkyMjQzNV19
+eyJoaXN0b3J5IjpbMTI5NDE5Mjk2MSwxNzM0OTIyNDM1XX0=
 -->
