--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -35,7 +35,8 @@
 	- write-lock은 다른 트랜잭션에 대한 영향도가 크기 때문에, 반드시 읽고 나서 변경이 필요할 때만 사용하자.
 - 위의 lock 방식들은 commit, rollback이 실행되면 잠금이 해제된다. 반드시 한 트랜잭션 내에서만 유효하다는 점을 기억하라.
 - 아래와 같은 경우에는 사용할 수 없다.
-	- 요청1에서 read or write lock을 사용하면 해당 커넥션은 
+	- 요청1에서 read or write lock을 사용하고 그냥 종료해버리면 해당 커넥션은 다시 사용할 수 없게 됨.
+	- 요청2를 수행하지 않고 사용자가 떠나버리면, 요청1에서 잠긴 레코드는 영원히 잠금이 해제되지 않는다.
 ```mermaid
 sequenceDiagram
 사용자 ->> 웹서버 : 요청1
@@ -103,5 +104,5 @@ MySQL ->> 웹서버 :
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY5ODI0MjU4NCwxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbLTE2ODk2MjIyNiwxNzM0OTIyNDM1XX0=
 -->
