RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -49,9 +49,12 @@ MySQL ->> 웹서버 :
 MySQL ->> 웹서버 : 
 웹서버 ->> 사용자 : 응답2
 ```
-
+* try finally로 반드시 commit, rollback이 수행되어 트랜잭션이 종료되도록 작성해야 한다.
 
 ## INSERT, UPDATE, DELETE
+
+* 기본적으로 write-lock을 사용한다. 필요 시 read-lock을 사용할수도 있다.
+* 
 
 # 12.2 SQL 문장별로 사용하는 lock
 
@@ -104,5 +107,5 @@ MySQL ->> 웹서버 :
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2ODk2MjIyNiwxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbMTIzMjM5ODI2MywxNzM0OTIyNDM1XX0=
 -->
