RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -54,7 +54,9 @@ MySQL ->> 웹서버 :
 ## INSERT, UPDATE, DELETE
 
 * 기본적으로 write-lock을 사용한다. 필요 시 read-lock을 사용할수도 있다.
-* 
+* connection에 auto-commit이 활성화되어 있어도 SQL 처리 시 lock을 획득하고 해제하는 작업은 수행된다.
+	* 각 SQL 문장마다 트랜잭션이 자동으로 시작되고 종료된다고 이해하자.
+* auto-commit이 설정되지 않으면 SQL이 실행될 때 자동으로 트랜잭션이 시작되지만, 종료는 반드시 COMMIT, ROLLBACK 명령을 사용해서 수동으로 종료시켜야 한다.
 
 # 12.2 SQL 문장별로 사용하는 lock
 
@@ -107,5 +109,5 @@ MySQL ->> 웹서버 :
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIzMjM5ODI2MywxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbMTcyMzU0OTc3NiwxNzM0OTIyNDM1XX0=
 -->
