RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -58,6 +58,9 @@ MySQL ->> 웹서버 :
 	* 각 SQL 문장마다 트랜잭션이 자동으로 시작되고 종료된다고 이해하자.
 * auto-commit이 설정되지 않으면 SQL이 실행될 때 자동으로 트랜잭션이 시작되지만, 종료는 반드시 COMMIT, ROLLBACK 명령을 사용해서 수동으로 종료시켜야 한다.
 
+### UPDATE, DELETE lock의 잠금
+* 쿼리가 실행될 때 조건 절에 일치하는 레코드를 찾기 위해, 스캔한
+
 # 12.2 SQL 문장별로 사용하는 lock
 
 ## SELECT 쿼리의 lock
@@ -109,5 +112,5 @@ MySQL ->> 웹서버 :
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcyMzU0OTc3NiwxNzM0OTIyNDM1XX0=
+eyJoaXN0b3J5IjpbLTEyMTQ2NDU3MjMsMTczNDkyMjQzNV19
 -->
