RealMysql/12. 쿼리 종류별 잠.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠.md
+++ b/RealMysql/12. 쿼리 종류별 잠.md
@@ -59,7 +59,10 @@ MySQL ->> 웹서버 :
 * auto-commit이 설정되지 않으면 SQL이 실행될 때 자동으로 트랜잭션이 시작되지만, 종료는 반드시 COMMIT, ROLLBACK 명령을 사용해서 수동으로 종료시켜야 한다.
 
 ### UPDATE, DELETE lock의 잠금
-* 쿼리가 실행될 때 조건 절에 일치하는 레코드를 찾기 위해, 스캔한
+* 쿼리가 실행될 때 조건 절에 일치하는 레코드를 찾기 위해, 스캔하는 인덱스의 모든 레코드에 잠금을 건다.
+	* where절 조건에 일치하지 않는 레코드도 lock 대상이 된다.
+	* 조건 절에 조건을 모두 사용하지 않을 수 있다. (10개 조건을 지정했을 때 일부 조건만 사용)
+	* 
 
 # 12.2 SQL 문장별로 사용하는 lock
 
@@ -112,5 +115,5 @@ MySQL ->> 웹서버 :
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMTQ2NDU3MjMsMTczNDkyMjQzNV19
+eyJoaXN0b3J5IjpbLTI5NTU4NjQ5NCwxNzM0OTIyNDM1XX0=
 -->
